tests/fixtures/functional_patterns/negative/n40_write_file.rs
use std::fs;

fn save_content(path: &str, content: &str) -> Result<(), std::io::Error> {
    fs::write(path, content)
}
